k8s-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seneca-bookstore
  labels:
    name: seneca-bookstore
    component: security
    app: bookstore
